--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         const urlInput = document.getElementById('urlInput');
 
         // Set a default value to make it easy to test
-        urlInput.value = "https:/?skip.nightly.pw/";
+        urlInput.value = "https://skip.nightly.pw/";
 
         /**
          * Creates an in-memory Blob object containing an iframe that embeds the user's URL.
