--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="bg-white p-8 rounded-xl shadow-2xl max-w-2xl w-full">
         <h1 class="text-3xl font-bold text-gray-800 mb-4">Dynamic Blob URL Embedder</h1>
         <p class="text-gray-600 mb-4">
-            Enter a web address below. The script will create an in-memory HTML page with an embedded frame and open it using a secure <code>blob:</code> URL.
+            most game site that are blocked work here <code>blob:</code> URL.
         </p>
 
         <!-- Input Area for URL -->
